PP-6614 - Add empty string for last four digits to Sandbox for Wallet Payments
Description:
- The lastFourDigitsCardNumber is not used for authorisation purposes by Apple and Google Pay it is purely cosmetic. However in our tests
Sandbox determines the authorisation status based on the lastFourDigitsCardNumber field which is not ideal. To ensure our pact test passes (see PP-6614 in frontend) we have added an empty string to
Sandbox allowed card numbers
- We add a check for whether lastFourDigitsCardNumber is of length 4 to handle the case of an empty string as otherwise an Exception will be thrown. This is to fix a bug as lastFourDigitsCardNumber isn't used for authorisation so upon successful authorisation the contents of lastFourDigitsCardNumber shouldn't matter.
- Apple/Google Pay don't use the last_four_digits as part of authorisation but we do for producing canned responses for authorisation. To better test Apple/Google Pay the test numbers have been moved to a separate class to ensure separation of concerns.